clean up use jpl instead of jul follow ide advices anti i18n